<resources>
    <string name="app_name">OwmApi</string>
    <string name="title_activity_add_new_town">AddNewTownActivity</string>
    <string name="input_town_name">Введите название города</string>
    <string name="add_town_btn">Добавить город</string>
    <string name="checking_your_city">Определяем ваш город, включите GPS</string>
    <string name="town_name">название города</string>
    <string name="town_temp">температура</string>
    <string name="town_wind_speed">скорость ветра</string>
    <string name="town_w_direct">направление ветра</string>
    <string name="town_remove">Удалить</string>
    <string name="title_location_permission">Запрос разрешения</string>
    <string name="text_location_permission">Согласны дать разрешение?</string>
    <string name="ok">Да</string>
</resources>
