<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_town_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="10dp"
    android:padding="8dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/white_ffffff"
        android:orientation="vertical"
        android:padding="12dp">


        <TextView
            android:id="@+id/text_town_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/town_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_town_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/town_temp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_town_windspeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/town_wind_speed"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_town_winddirection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/town_w_direct"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_town_remove"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/town_remove"
            android:textColor="@color/colorBlueButton"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>
</android.support.v7.widget.CardView>